fixing road label proportions per zoom

--- a/eraser-map.yaml
+++ b/eraser-map.yaml
@@ -1436,7 +1436,7 @@ layers:
                             text_source: function() { if( feature.ref && feature.name ) { if( feature.ref.length < 6 ) { return feature.ref + " " + feature.name; } else { return feature.name; } } else { return feature.name; } }
                             font:
                                 fill: [0.0,0.0,0.0]
-                                size: 15px
+                                size: 14px
                                 stroke: { color: [1.00,1.00,1.00], width: 3 }
                 labels-trunk_primary-z16-z17:
                     filter: { $zoom: { min: 16, max: 18 } }
@@ -1737,7 +1737,7 @@ layers:
                             text_source: function() { if( feature.ref && feature.name ) { if( feature.ref.length < 6 ) { return feature.ref + " " + feature.name; } else { return feature.name; } } else { return feature.name; } }
                             font:
                                 fill: [0.15,0.15,0.15]
-                                size: 13px
+                                size: 14px
                                 stroke: { color: [1.00,1.00,1.00], width: 2 }
                 labels-tertiary-z18:
                     filter: { $zoom: { min: 18 } }
@@ -1973,9 +1973,9 @@ layers:
                         font:
                             # need fill color?
                             fill: [0.25,0.25,0.25]
-                            size: 12px
+                            size: 13px
                             # stroke: { color: *text_stroke, width: 2 }
-            labels-service_road2:
+            labels-service_road-z18:
                 filter: { $zoom: { min: 18 } }
                 draw:
                     text-blend-order:
