fixing road label proportions per zoom

--- a/eraser-map.yaml
+++ b/eraser-map.yaml
@@ -1438,8 +1438,19 @@ layers:
                                 fill: [0.0,0.0,0.0]
                                 size: 14px
                                 stroke: { color: [1.00,1.00,1.00], width: 3 }
-                labels-trunk_primary-z16-z17:
-                    filter: { $zoom: { min: 16, max: 18 } }
+                labels-trunk_primary-z16:
+                    filter: { $zoom: [16] }
+                    draw:
+                        text-blend-order:
+                            priority: 23
+                            visible: *text_visible_trunk_primary
+                            text_source: function() { if( feature.ref && feature.name ) { return feature.ref + " " + feature.name; } else { return feature.name; } }
+                            font:
+                                fill: [0.0,0.0,0.0]
+                                size: 15px
+                                stroke: { color: [1.00,1.00,1.00], width: 3 }
+                labels-trunk_primary-z17:
+                    filter: { $zoom: [17] }
                     draw:
                         text-blend-order:
                             priority: 23
@@ -1601,7 +1612,7 @@ layers:
                             text_source: function() { if( feature.ref && feature.name ) { if( feature.ref.length < 6 ) { return feature.ref + " " + feature.name; } else { return feature.name; } } else { return feature.name; } }
                             font:
                                 fill: [0.0,0.0,0.0]
-                                size: 15px
+                                size: 14.5px
                                 stroke: { color: [1.00,1.00,1.00], width: 3 }
                 labels-secondary-z18:
                     filter: { $zoom: { min: 18 } }
@@ -1737,7 +1748,7 @@ layers:
                             text_source: function() { if( feature.ref && feature.name ) { if( feature.ref.length < 6 ) { return feature.ref + " " + feature.name; } else { return feature.name; } } else { return feature.name; } }
                             font:
                                 fill: [0.15,0.15,0.15]
-                                size: 14px
+                                size: 15px
                                 stroke: { color: [1.00,1.00,1.00], width: 2 }
                 labels-tertiary-z18:
                     filter: { $zoom: { min: 18 } }
