search-inactive should draw with icons-overlay

--- a/eraser-map.yaml
+++ b/eraser-map.yaml
@@ -912,7 +912,7 @@ layers:
         inactive:
             filter: { state: inactive }
             draw:
-                icons:
+                icons-overlay:
                     sprite: search-inactive
 
     # Basemap styling
