--- a/eraser-map.yaml
+++ b/eraser-map.yaml
@@ -2545,8 +2545,7 @@ layers:
                 polygons:
                     color: [0.950,0.917,0.883]
                 lines:
-                    outline:
-                        color: *brown1_bo
+                    color: *brown1_bo
         in_hospital:
             filter: { landuse_kind: hospital }
             draw:
@@ -2557,7 +2556,7 @@ layers:
             draw:
                 polygons:
                     color: *purple_b
-                outline:
+                lines:
                     color: *purple_bo
                     width: [[14,0.5px],[15,0.5px],[17,0.5px],[18,0.75px],[19,0.25m]]
         in_retail:
