--- a/eraser-map.yaml
+++ b/eraser-map.yaml
@@ -91,10 +91,10 @@ settings:
         - &path_bridge_casing2        [0.870,0.870,0.870] # zoomed out
         - &path_steps1                [0.91,0.91,0.91]
         - &path_steps1_b              '#f0ebeb'
-        - &piste_easy                 '#d0d0d0'
-        - &piste_intermediate         '#d0d0d0'
-        - &piste_advanced             '#b3b3b3'
-        - &piste_expert               '#a6a6a6'
+        - &piste_easy                 [0.086,0.608,0.420]
+        - &piste_intermediate         [0.047,0.353,0.647]
+        - &piste_advanced             [0.000,0.000,0.000]
+        - &piste_expert               [0.000,0.000,0.000]
 
     boundaries:
         - &country_boundary           [1.0,1.0,1.0]
@@ -2373,8 +2373,11 @@ layers:
                 filter: { aerialway: chair_lift }
                 draw:
                     lines:
-                        color: '#333'
-                        width: [[13, 0.75px], [14, 1.5px], [15, 2.5px], [16, 3m]]
+                        color: [0.443,0.302,0.584]
+                        width: [[13, 0.75px], [14, 0.75px], [15, 1.5px], [16, 1.5px], [17, 2m]]
+                    lines_transparent:
+                        color: [0.443,0.302,0.584,0.20]
+                        width: [[13, 0.75px], [14, 5px], [15, 8px], [16, 9px], [17, 10m]]
             aerialway-labels:
                 filter: { $zoom: { min: 14 } }
                 draw:
