--- a/eraser-map.yaml
+++ b/eraser-map.yaml
@@ -91,10 +91,10 @@ settings:
         - &path_bridge_casing2        [0.870,0.870,0.870] # zoomed out
         - &path_steps1                [0.91,0.91,0.91]
         - &path_steps1_b              '#f0ebeb'
-        - &piste_easy                 [0.086,0.608,0.420]
-        - &piste_intermediate         [0.047,0.353,0.647]
-        - &piste_advanced             [0.000,0.000,0.000]
-        - &piste_expert               [0.000,0.000,0.000]
+        - &piste_easy                 [0.367,0.750,0.622]
+        - &piste_intermediate         [0.420,0.678,0.863]
+        - &piste_advanced             [0.450,0.450,0.450]
+        - &piste_expert               [0.450,0.450,0.450]
 
     boundaries:
         - &country_boundary           [1.0,1.0,1.0]
@@ -2249,7 +2249,7 @@ layers:
                     cap: round
                     join: round
                     color: '#909090'
-                    width: [[13,0px],[14,0.5px],[15, 1px], [16, 2px], [18, 3m]]
+                    width: [[13,0px],[14,0.5px],[15, 1px], [16, 1.5px], [18, 3m]]
                 text-blend-order:
                     priority: 8
                     visible: true
@@ -2307,8 +2307,8 @@ layers:
                     #order: 5
                     cap: round
                     join: round
-                    color: *orange3
-                    width: [[13,1.5px],[14,2px],[15, 3px], [16, 5px], [18, 10m], [19, 15m]]
+                    color: [0.600,0.667,0.627]
+                    width: [[13,0.5px],[14,1px],[15, 1px], [16, 1.5px], [18, 3px], [19, 5px]]
         airport-lines:
             filter: { kind: minor_road, aeroway: [runway,taxiway] }
             draw:
@@ -2367,17 +2367,20 @@ layers:
                 filter: { aerialway: [gondola, cable_car] }
                 draw:
                     lines:
-                        color: black
-                        width: [[12, 2.0px], [13, 1.75px], [14, 2.25px], [15, 3.0px], [16, 4m]]
+                        color: [0.498,0.302,0.243]
+                        width: [[12, 0.5px], [13, 0.5px], [14, 0.6px], [15, 1px], [16, 2px]]
+                    lines_transparent:
+                        color: [0.498,0.302,0.243,0.15]
+                        width: [[12, 0px], [13, 5px], [14, 8px], [15, 10px], [16, 12px]]
             chair_lift:
                 filter: { aerialway: chair_lift }
                 draw:
                     lines:
-                        color: [0.443,0.302,0.584]
-                        width: [[13, 0.75px], [14, 0.75px], [15, 1.5px], [16, 1.5px], [17, 2m]]
+                        color: [0.493,0.541,0.666]
+                        width: [[12, 0.5px], [13, 0.5px], [14, 0.6px], [15, 1px], [16, 1px], [16, 2px], [18, 3m]]
                     lines_transparent:
-                        color: [0.443,0.302,0.584,0.20]
-                        width: [[13, 0.75px], [14, 5px], [15, 8px], [16, 9px], [17, 10m]]
+                        color: [0.635,0.698,0.859,0.20]
+                        width: [[12, 0px], [13, 5px], [14, 8px], [15, 10px], [16, 12px], [18, 20px]]
             aerialway-labels:
                 filter: { $zoom: { min: 14 } }
                 draw:
