--- a/eraser-map.yaml
+++ b/eraser-map.yaml
@@ -2297,8 +2297,11 @@ layers:
             filter: { kind: path, man_made: pier }
             draw:
                 lines:
-                    color: white
-                    width: [[13, 0.5px], [15, 1.5px], [17, 3m]]
+                    color: [0.993,0.993,0.993]
+                    width: [[13, 0px], [14, 0.5px],[15, 1.5px], [16, 2.5px],[17, 3px],[18, 3m]]
+                    outline:
+                        color: [0.675,0.855,0.886]
+                        width: [[15, 0px],[16,0.65px], [17, 0.75px], [18, 1px], [19, 1.5px]]
         racetrack:
             filter: { kind: racetrack }
             draw:
