removing station early zoom area filter, messes with London and Paris

--- a/eraser-map.yaml
+++ b/eraser-map.yaml
@@ -4826,21 +4826,21 @@ layers:
                         offset: [[13, [0, 6px]], [14, [0, 7px]],[15, [0, 8px]], [17, [0, 10px]]]
                         priority: 12
                 low-priority-early:
-                    filter: { kind_tile_rank: { min: 5 }, area: false, $zoom: { min: 0, max: 14 } }
+                    filter: { kind_tile_rank: { min: 5 }, $zoom: { min: 0, max: 13 } }
                     draw:
                         icons:
                             visible: false
                             #size: [[12, 10px], [14, 10px], [15, 16px]]
                         text-blend-order: { visible: false }
                 low-priority-early-z13:
-                    filter: { kind_tile_rank: { min: 5 }, area: false, $zoom: [13] }
+                    filter: { kind_tile_rank: { min: 5 }, $zoom: [13] }
                     draw:
                         icons:
                             visible: false
                             #size: [[12, 10px], [14, 10px], [15, 16px]]
                         text-blend-order: { visible: false } 
                 low-priority-early-z14:
-                    filter: { kind_tile_rank: { min: 7 }, area: false, $zoom: { min: 14, max: 15 } }
+                    filter: { kind_tile_rank: { min: 7 }, $zoom: { min: 14, max: 15 } }
                     draw:
                         icons:
                             size: [[12, 10px], [14, 11px], [15, 16px]]
