current location gem and route icon should be under pins

--- a/eraser-map.yaml
+++ b/eraser-map.yaml
@@ -875,19 +875,22 @@ styles:
     text-blend-order:
         base: text
         blend_order: 1
-    text-blend-order-overlay:
-        base: text
-        blend_order: 1
-        blend: overlay
-    icons-overlay:
-        base: points
-        texture: pois
-        blend: overlay
-        blend_order: 2
-    lines-overlay:
+    ui-lines-overlay:
         base: lines
         blend: overlay
         blend_order: 0
+    ui-location-gem-overlay:
+        base: points
+        texture: pois
+        interactive: true
+        blend: overlay
+        blend_order: 2
+    ui-icons-overlay:
+        base: points
+        texture: pois
+        interactive: true
+        blend: overlay
+        blend_order: 3
 
 scene:
     background:
@@ -898,14 +901,14 @@ layers:
     route:
         data: { source: route }
         draw:
-            lines-overlay:
+            ui-lines-overlay:
                 color: '#06a6d4'
                 order: 50
                 width: [[0,2.5px],[8,3px],[9,3.5px],[10,4px],[11,5px],[16,8m]]
     current_location_gem:
         data: { source: find_me }
         draw:
-            icons-overlay:
+            ui-location-gem-overlay:
                 interactive: true
                 sprite: current-location
                 size: 36px
@@ -916,7 +919,7 @@ layers:
     route_icon:
         data: { source: route_icon }
         draw:
-            icons-overlay:
+            ui-location-gem-overlay:
                 interactive: true
                 sprite: route-arrow
                 size: [33px,40px]
@@ -927,7 +930,7 @@ layers:
     route_start:
         data: { source: route_start }
         draw:
-            icons-overlay:
+            ui-icons-overlay:
                 interactive: true
                 priority: 1
                 sprite: route-start
@@ -940,7 +943,7 @@ layers:
     route_stop:
         data: { source: route_stop }
         draw:
-            icons-overlay:
+            ui-icons-overlay:
                 interactive: true
                 priority: 1
                 sprite: route-stop
@@ -953,7 +956,7 @@ layers:
     search:
         data: { source: search }
         draw:
-            icons-overlay:
+            ui-icons-overlay:
                 interactive: true
                 sprite: search-active
                 size: [36px,46px]
@@ -965,12 +968,12 @@ layers:
         inactive:
             filter: { state: inactive }
             draw:
-                icons-overlay:
+                ui-icons-overlay:
                     sprite: search-inactive
     reverse_geocode:
         data: { source: reverse_geocode }
         draw:
-            icons-overlay:
+            ui-icons-overlay:
                 interactive: true
                 sprite: search-active
                 size: [36px,46px]
